[gd_scene load_steps=4 format=3 uid="uid://dqg2nxqwopy5"]

[ext_resource type="Script" path="res://Scripts/white_duke.gd" id="1_0em7k"]
[ext_resource type="Texture2D" uid="uid://bmp6063fhvvja" path="res://Assets/white_king.png" id="1_641wk"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_tknc0"]
size = Vector2(12, 14)

[node name="white_duke" type="Area2D" groups=["active_pieces", "white_pieces"]]
z_index = 2
collision_mask = 3
script = ExtResource("1_0em7k")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_tknc0")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture_filter = 1
texture = ExtResource("1_641wk")
region_rect = Rect2(2.89456, 1.8454, 12.1036, 16.2011)

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
